Attempted bug fix - when typing in text box, upper part of chatbot cut off

--- a/src/style.css
+++ b/src/style.css
@@ -237,7 +237,7 @@ body.show-chatbot .chatbot {
   .chatbot {
     right: 0;
     bottom: 0;
-    height: 80%;
+    height: 95%;
     border-radius: 0;
     width: 100%;
   }
